# rust-html-diff

./: Cargo.toml
example/: test.yaml
src/: args.rs  fetch.rs  html.rs  main.rs  yaml.rs
