[package]
name = "diff-to-html"
version = "0.1.0"
edition = "2021"
description = "html diff to html"
license = "MIT"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
colored = "2.1.0"
futures = "0.3.30"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_yaml = "0.9.34"
similar = "2.5.0"
tokio = { version = "1.38.1", features = ["full"] }
